--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: rgb(236, 236, 236);
+  background-color: rgb(189, 189, 189);
 }
 
 /* Estilização Game-Board */
@@ -18,55 +18,120 @@ body {
   margin: 0 auto;
   position: relative;
   overflow: hidden;
-  background: linear-gradient(#87CEE8, #E0F6FF);
-  border-bottom: 10px solid #3cff00;
+  background: linear-gradient(#ccd587, #00d4ff);
 }
 
-/* Estilizações Mario */
-.mario {
-  width: 75px;
+/* Estilização do Herói */
+.hero {
   position: absolute;
+  width: 80px;
   bottom: 0;
   margin-left: 100px;
   z-index: 10;
+  display: none;
+  padding-bottom: 30px;
 }
 
-.jump {
-  animation: mario-jump 1500ms ease-out;
+.hero-jump {
+  animation: hero-jump 500ms ease-out;
 }
 
-@keyframes mario-jump {
+@keyframes hero-jump {
   0% {
     bottom: 0px;
   }
   40% {
-    bottom: 90px;
+    bottom: 160px;
   }
   50% {
-    bottom: 100px;
+    bottom: 160px;
   }
   60% {
-    bottom: 90px;
+    bottom: 160px;
   }
-  100% {
+  100%{
     bottom: 0px;
   }
 }
 
-/* Estilização Cenário */
-.pipe {
+/* Estilização do Piso */
+.floor {
+  width: 1500px;
   position: absolute;
   bottom: 0;
-  width: 70px;
+  padding-bottom: 34px;
+}
+
+.floor1 {
+  position: absolute;
+  z-index: 0;
+  width: 1800px;
+}
+
+.floor2 {
+  position: absolute;
+  right: -1500px;
+  z-index: 10;
+  width: 1700px;
+}
+
+.floor3 {
+  position: absolute;
+  right: -1500px;
+  z-index: 10;
+  width: 1600px;
+}
+
+.floor-animation-1 {
+  animation: floor-animation-1 3.1s infinite linear;
+}
+@keyframes floor-animation-1 {
+  0% {
+    right: 0px;
+  }
+  100% {
+    right: 100%;
+  }
+}
+
+.floor-animation-2 {
+  animation: floor-animation-2 6.2s infinite linear;
+}
+@keyframes floor-animation-2 {
+  0% {
+    right: -1500px;
+  }
+  100% {
+    right: 100%;
+  }
+}
+
+.floor-animation-3 {
+  animation: floor-animation-3 6.2s infinite linear;
+}
+@keyframes floor-animation-3 {
+  0% {
+    right: -1500px;
+  }
+  100% {
+    right: 100%;
+  }
+}
+
+/* Estilização Cacto */
+.cacto {
+  position: absolute;
+  bottom: 0;
+  width: 120px;
   right: -80px;
+  padding-bottom: 25px;
   z-index: 10;
 }
 
-.pipe-animation {
-  animation: pipe-animation-movement 2s infinite linear;
+.cacto-animation {
+  animation: cacto-animation 2s infinite linear;
 }
-
-@keyframes pipe-animation-movement {
+@keyframes cacto-animation {
   from {
     right: -80px;
   }
@@ -75,18 +140,17 @@ body {
   }
 }
 
-/* Estilização Nuvem */
-.clouds {
+/* Estilização da Nuvem */
+.cloud {
   position: absolute;
-  width: 550px;
+  width: 450px;
   z-index: 4;
 }
 
-.clouds-animation-movement {
-  animation: clouds-animation 20s infinite linear;
+.cloud-animation {
+  animation: cloud-animation 20s infinite linear;
 }
-
-@keyframes clouds-animation {
+@keyframes cloud-animation {
   from {
     right: -550px;
   }
@@ -95,26 +159,19 @@ body {
   }
 }
 
-/* Estilização dos Status */
-.textStart {
+p {
   font-family: 'Montserrat', sans-serif;
+  text-align: center;
   padding: 50px;
-  text-align: center;
   color: #131313;
-  cursor: default;
 }
 
-.points {
+/* Game Over Screen */
+.gameOverText {
+  justify-content: center;
+  margin-top: 200px;
   font-family: 'Montserrat', sans-serif;
-  padding: 20px;
-  text-align: center;
-  color: rgb(162, 180, 1);
-  cursor: default;
-}
-
-#contador {
-  font-family: 'Montserrat', sans-serif;
-  text-align: center;
-  color: #131313;
-  cursor: default;
+  font-size: x-large;
+  color: red;
+  display: none;
 }
